# tgbot

BookTrackerBot/: books_library.db  config.py  main.py  pyproject.toml
BookTrackerBot/bot/: handlers.py  keyboards.py
BookTrackerBot/database/: db.py
BookTrackerBot/services/: book_sources.py  openlibrary.py  recommendations.py
BookTrackerBot/utils/: validators.py
