[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "python-dotenv>=1.1.0",
    "python-telegram-bot==20.8",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
]
